--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,16 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "dhtmlx-gantt": "^7.0.13",
+    "faker": "4.1.0",
+    "interactjs": "1.3.4",
+    "moment": "^2.29.1",
+    "prop-types": "15.7.2",
+    "randomcolor": "0.5.3",
     "react": "^17.0.1",
+    "react-calendar-timeline": "^0.27.0",
     "react-dom": "^17.0.1",
+    "react-gantt-timeline": "^0.4.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
