--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "googleapis": "^67.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "validator": "^13.5.2"
   }
