--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "bufferutil": "^4.0.3",
     "dhtmlx-gantt": "^7.0.13",
     "faker": "4.1.0",
     "interactjs": "1.3.4",
@@ -15,6 +16,7 @@
     "randomcolor": "0.5.3",
     "react": "^17.0.1",
     "react-calendar-timeline": "^0.27.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-gantt-timeline": "^0.4.3",
     "react-redux": "^7.2.2",
@@ -26,6 +28,7 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.1",
+    "utf-8-validate": "^5.0.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
